G1 garbage collector